change img name

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-advantages__item">
 						<div class="b-advantages__item-img">
-							<img src="images/adv.svg" alt="">
+							<img src="images/a1.svg" alt="">
 						</div>
 						<div class="b-advantages__text">
 							<b>Цена известна заранее</b>
@@ -380,7 +380,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-advantages__item">
 						<div class="b-advantages__item-img">
-							<img src="images/adv2.svg" alt="">
+							<img src="images/a2.svg" alt="">
 						</div>
 						<div class="b-advantages__text">
 							<b>Дизайн проект</b>
@@ -391,7 +391,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-advantages__item">
 						<div class="b-advantages__item-img">
-							<img src="images/adv3.svg" alt="">
+							<img src="images/a3.svg" alt="">
 						</div>
 						<div class="b-advantages__text">
 							<b>Гарантия на ремонт</b>
@@ -403,7 +403,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-advantages__item">
 						<div class="b-advantages__item-img">
-							<img src="images/adv4.svg" alt="">
+							<img src="images/a4.svg" alt="">
 						</div>
 						<div class="b-advantages__text">
 							<b>Качественные материалы</b>
@@ -414,7 +414,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-advantages__item">
 						<div class="b-advantages__item-img">
-							<img src="images/adv5.svg" alt="">
+							<img src="images/a5.svg" alt="">
 						</div>
 						<div class="b-advantages__text">
 							<b>Специалисты своего дела</b>
@@ -425,7 +425,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-advantages__item">
 						<div class="b-advantages__item-img">
-							<img src="images/adv6.svg" alt="">
+							<img src="images/a6.svg" alt="">
 						</div>
 						<div class="b-advantages__text">
 							<b>Поэтапная оплата</b>
