--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<li><a href="#b-products">ПРОДУКЦИЯ</a></li>
 						<li><a href="">УСЛУГИ</a></li>
 						<li><a href="#gallery">ПОРТФОЛИО</a></li>
-						<li><a href="">ПРАЙС</a></li>
+						<li><a href="#calc">ПРАЙС</a></li>
 					</ul>
 				</nav>
 				<a href="tel:+7 (900) 700-10-00" class="b-phone">+7 (900) 700-10-00</a>
@@ -187,7 +187,7 @@
 		<div class="container">
 			<div class="b-title"><span>Продукция</span></div>
 			<div class="row">
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-product">
 						<div class="b-product__img">
 							<img src="images/img.png" alt="">
@@ -204,7 +204,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-product">
 						<div class="b-product__img">
 							<img src="images/img.png" alt="">
@@ -221,7 +221,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-product">
 						<div class="b-product__img">
 							<img src="images/img.png" alt="">
@@ -238,7 +238,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-product">
 						<div class="b-product__img">
 							<img src="images/img.png" alt="">
@@ -255,7 +255,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-product">
 						<div class="b-product__img">
 							<img src="images/img.png" alt="">
@@ -272,7 +272,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
 					<div class="b-product">
 						<div class="b-product__img">
 							<img src="images/img.png" alt="">
@@ -289,11 +289,116 @@
 						</div>
 					</div>
 				</div>
-
+			</div>
+			<div class="hide-block">
+				<div class="row">
+					<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
+						<div class="b-product">
+							<div class="b-product__img">
+								<img src="images/img.png" alt="">
+							</div>
+							<div class="b-product__wrap">
+								<div class="b-product__wrap-top">
+									<div class="b-product__name"><span>Гараж 6 x 4 x 3 м</span></div>
+									<p>С двускатной крышей секционными воротами, дверью, окном и водостоком</p>
+								</div>
+								<div class="b-product__wrap-bottom">
+									<div class="b-product__price">Цена  от 200 000 р</div>
+									<button class="b-link modal-link" data-modal-id="1">Узнать больше</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
+						<div class="b-product">
+							<div class="b-product__img">
+								<img src="images/img.png" alt="">
+							</div>
+							<div class="b-product__wrap">
+								<div class="b-product__wrap-top">
+									<div class="b-product__name"><span>Гараж 6 x 4 x 3 м</span></div>
+									<p>С двускатной крышей секционными воротами, дверью, окном и водостоком</p>
+								</div>
+								<div class="b-product__wrap-bottom">
+									<div class="b-product__price">Цена  от 200 000 р</div>
+									<button class="b-link modal-link" data-modal-id="1">Узнать больше</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
+						<div class="b-product">
+							<div class="b-product__img">
+								<img src="images/img.png" alt="">
+							</div>
+							<div class="b-product__wrap">
+								<div class="b-product__wrap-top">
+									<div class="b-product__name"><span>Гараж 6 x 4 x 3 м</span></div>
+									<p>С двускатной крышей секционными воротами, дверью, окном и водостоком</p>
+								</div>
+								<div class="b-product__wrap-bottom">
+									<div class="b-product__price">Цена  от 200 000 р</div>
+									<button class="b-link modal-link" data-modal-id="1">Узнать больше</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
+						<div class="b-product">
+							<div class="b-product__img">
+								<img src="images/img.png" alt="">
+							</div>
+							<div class="b-product__wrap">
+								<div class="b-product__wrap-top">
+									<div class="b-product__name"><span>Гараж 6 x 4 x 3 м</span></div>
+									<p>С двускатной крышей секционными воротами, дверью, окном и водостоком</p>
+								</div>
+								<div class="b-product__wrap-bottom">
+									<div class="b-product__price">Цена  от 200 000 р</div>
+									<button class="b-link modal-link" data-modal-id="1">Узнать больше</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
+						<div class="b-product">
+							<div class="b-product__img">
+								<img src="images/img.png" alt="">
+							</div>
+							<div class="b-product__wrap">
+								<div class="b-product__wrap-top">
+									<div class="b-product__name"><span>Гараж 6 x 4 x 3 м</span></div>
+									<p>С двускатной крышей секционными воротами, дверью, окном и водостоком</p>
+								</div>
+								<div class="b-product__wrap-bottom">
+									<div class="b-product__price">Цена  от 200 000 р</div>
+									<button class="b-link modal-link" data-modal-id="1">Узнать больше</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="b-product__col col-xl-4 col-lg-4 col-md-4 col-sm-6">
+						<div class="b-product">
+							<div class="b-product__img">
+								<img src="images/img.png" alt="">
+							</div>
+							<div class="b-product__wrap">
+								<div class="b-product__wrap-top">
+									<div class="b-product__name"><span>Гараж 6 x 4 x 3 м</span></div>
+									<p>С двускатной крышей секционными воротами, дверью, окном и водостоком</p>
+								</div>
+								<div class="b-product__wrap-bottom">
+									<div class="b-product__price">Цена  от 200 000 р</div>
+									<button class="b-link modal-link" data-modal-id="1">Узнать больше</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-xl d-flex justify-content-center align-items-center">
-					<a href="#" class="btn-blue ripple">Посмотреть все</a>
+					<button class="btn-blue show-block"><span>Посмотреть все</span></button>
 				</div>
 			</div>
 		</div>
@@ -354,9 +459,53 @@
 					</a>
 				</div>
 			</div>
+			<div class="hide-block">
+				<div class="row">
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto3.jpg">
+							<img src="images/foto3.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto4.jpg">
+							<img src="images/foto4.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto5.jpg">
+							<img src="images/foto5.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto6.jpg">
+							<img src="images/foto6.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto7.jpg">
+							<img src="images/foto7.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto8.jpg">
+							<img src="images/foto8.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto9.jpg">
+							<img src="images/foto9.jpg" alt="">
+						</a>
+					</div>
+					<div class="b-gallery__col b-gallery__col_sm col-xl-3 col-lg-3 col-md-4 col-sm-6">
+						<a data-fancybox="images" href="images/foto10.jpg">
+							<img src="images/foto10.jpg" alt="">
+						</a>
+					</div>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-xl d-flex justify-content-center align-items-center">
-					<a href="#" class="btn-blue ripple">Посмотреть все</a>
+					<button class="btn-blue show-block"><span>Посмотреть все</span></button>
 				</div>
 			</div>
 		</div>
@@ -453,7 +602,7 @@
 	</section>
 
 
-	<section class="b-calculation">
+	<section class="b-calculation" id="calc">
 		<div class="container">
 			<div class="b-calculation__wrapper">
 				<div class="b-calculation__left">
@@ -475,20 +624,10 @@
 							</div>
 							<div class="calc-col col-xl-6 col-lg-6 col-md-12 col-sm-12">
 								<div class="b-input">
-									<select class="b-select">
-										<option value="">Ширина</option>
-										<option value="">Ширина</option>
-										<option value="">Ширина</option>
-										<option value="">Ширина</option>
-									</select>
+									<input class="b-input__text" type="text" placeholder="Ширина">
 								</div>
 								<div class="b-input">
-									<select class="b-select">
-										<option value="">Длинна</option>
-										<option value="">Длинна</option>
-										<option value="">Длинна</option>
-										<option value="">Длинна</option>
-									</select>
+									<input class="b-input__text" type="text" placeholder="Длинна">
 								</div>
 							</div>
 						</div>
@@ -517,7 +656,7 @@
 						<li><a href="#b-products">ПРОДУКЦИЯ</a></li>
 						<li><a href="">УСЛУГИ</a></li>
 						<li><a href="#gallery">ПОРТФОЛИО</a></li>
-						<li><a href="">ПРАЙС</a></li>
+						<li><a href="#calc">ПРАЙС</a></li>
 					</ul>
 				</div>
 				<a href="tel:+7 (900) 700-10-00" class="b-phone">+7 (900) 700-10-00</a>
