--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 			<div class="b-header__right d-flex justify-content-between align-items-center">
 				<nav class="b-nav">
 					<ul>
-						<li><a href="#b-production">КОМПАНИЯ</a></li>
 						<li><a href="#b-products">ПРОДУКЦИЯ</a></li>
-						<li><a href="">УСЛУГИ</a></li>
 						<li><a href="#gallery">ПОРТФОЛИО</a></li>
-						<li><a href="#calc">ПРАЙС</a></li>
+						<li><a href="#sect2">ПРЕИМУЩЕСТВА</a></li>
+						<li><a href="#calc">расчёт стоимости</a></li>
 					</ul>
 				</nav>
 				<a href="tel:+7 (900) 700-10-00" class="b-phone">+7 (900) 700-10-00</a>
@@ -511,7 +510,7 @@
 		</div>
 	</section>
 
-	<section class="b-advantages">
+	<section class="b-advantages" id="sect2">
 		<div class="container">
 			<div class="b-title">Преимущенства</div>
 			<div class="row">
@@ -652,11 +651,10 @@
 				</a>
 				<div class="b-footer__nav">
 					<ul>
-						<li><a href="#b-production">О КОМПАНИЯ </a></li>
 						<li><a href="#b-products">ПРОДУКЦИЯ</a></li>
-						<li><a href="">УСЛУГИ</a></li>
 						<li><a href="#gallery">ПОРТФОЛИО</a></li>
-						<li><a href="#calc">ПРАЙС</a></li>
+						<li><a href="#sect2">ПРЕИМУЩЕСТВА</a></li>
+						<li><a href="#calc">расчёт стоимости</a></li>
 					</ul>
 				</div>
 				<a href="tel:+7 (900) 700-10-00" class="b-phone">+7 (900) 700-10-00</a>
